--- a/src/app/pages/group-details/group-details.page.scss
+++ b/src/app/pages/group-details/group-details.page.scss
@@ -1,19 +1,25 @@
 .group-details-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // justify-content: center;
+    padding: 3px;
     height: 100%;
     width: 100%;
-    margin: 5px;
+    margin: 1px;
 }
 
 .categories-section{
-    height: 15%;
+    height: 13%;
     width: 100%;
 }
 
 .products-section{
-    height: 15%;
+    height: 85%;
     width: 100%;
 }
+
+cdk-virtual-scroll-viewport {
+    height: 100%;
+    width: 100%;
+  }
